@@ -18,6 +18,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #8759: Fixed user paths in sysconfig for posix and os2 schemes.
+
 - Issue #1285086: Speed up urllib.quote and urllib.unquote for simple cases.
 
 - Issue #8688: Distutils now recalculates MANIFEST everytime.
